# AUTOGEN-POLICY-FORGER

./: DOCUMENTATION.md  README.md  demo_version.ipynb  main.py  pyproject.toml  requirements.txt  tools.py
agents/: amendment_writer.py  bill_parser_agent.py  debate_summerizer_agent.py  email_sender_agent.py  judge_agent.py  opposition_part_agent.py  report_maker_agent.py  ruling_party_agent.py  user_proxy_agent.py  voting_aggregator_agent.py
config/: prompt_loader.py  system_config.py  system_message.yaml
models/: openai_model.py
team/: bill_parser_inner_team.py  debate_team.py  judicial_voting.py  outer_team.py  report_team.py  society_teams.py
