[project]
name = "ai-policy-maker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen>=0.9.7",
    "autogen-agentchat>=0.7.2",
    "autogen-core>=0.7.2",
    "autogen-ext[ollama]>=0.7.2",
    "ipykernel>=6.30.1",
    "langchain-community>=0.3.27",
    "pypdf>=5.9.0",
    "pytest>=8.4.1",
    "streamlit>=1.48.0",
    "tiktoken>=0.10.0",
]
